# cerberus-dashboard

./: .gitreview  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  _cerberus.py.example  openstack-common.conf  setup.cfg  test-requirements.txt  tox.ini
cerberusdashboard/: __init__.py  dashboard.py  exceptions.py
cerberusdashboard/api/: cerberus.py
cerberusdashboard/plugins/: panel.py  tables.py  tabs.py  urls.py  views.py
cerberusdashboard/security_alarms/: panel.py  tables.py  tabs.py  urls.py  views.py
cerberusdashboard/security_reports/: panel.py  tables.py  tabs.py  urls.py  views.py
cerberusdashboard/tasks/: panel.py  tables.py  tabs.py  urls.py  views.py
cerberusdashboard/templates/plugins/: _detail_overview.html  detail.html  index.html
cerberusdashboard/templates/security_alarms/: _detail_overview.html  detail.html  index.html
cerberusdashboard/templates/security_reports/: _detail_overview.html  detail.html  index.html
cerberusdashboard/templates/tasks/: _detail_overview.html  detail.html  index.html
cerberusdashboard/tests/: test_cerberus-dashboard.py
cerberusdashboard/utils/: importutils.py
doc/source/: conf.py  index.rst  installation.rst  usage.rst
