[metadata]
name = cerberus-dashboard
summary = Dashboard for Openstack Cerberus
description-file =
    README.rst
author = OpenStack
version = 1.2-1
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    cerberusdashboard

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = cerberus-dashboard/locale
domain = cerberus-dashboard

[update_catalog]
domain = cerberus-dashboard
output_dir = cerberus-dashboard/locale
input_file = cerberus-dashboard/locale/cerberus-dashboard.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = cerberus-dashboard/locale/cerberus-dashboard.pot
